[package]
name = "pine-engine"
version = "0.1.0"
authors = ["Pine Developers <pine@barzin.io>", "Other individuals go here!"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://pine.github.io"
repository = "https://github.com/pineproject/pine"
documentation = "https://pine.github.io/docs"
readme = "README.md"
description = """

"""

[dependencies]

[lib]

[[bin]]